# file-expert

./: .gitignore  .gitlint.yaml  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  Makefile.am  Makefile.builder  README.md  birds.pl  build.rs  configure.ac  debug.pl  devskim-analysis.yml  disambiguations.yml  extra-extensions-kb.pl  file-expert.ebuild  file-expert.ebuild.in  file-expert.pl  file-expert.spec  file-expert.spec.in  github-extensions-kb.pl  heuristics.yml  languages.yml  load.pl  named_patterns.yml  run-tests  run.pl  samples  skipped.pl  skipped.yml  test  transform.py  wrap-gprolog.pl  wrap-swipl.pl
.cargo/: config.toml
fixtures/Binary/: cube.stl  git.deb  hello.pbc  linguist.gem  octocat.ai  octocat.psd  zip
lib/: file.pl
m4/: BKG_DIRECTORY_VARIABLES.m4  BKG_RPM.m4
src/: data_structures.rs  expert.rs  file_expert.pl  heuristic.rs  lib.rs  linguist_aliases.rs  linguist_aliases.rs.php  linguist_extensions.rs  linguist_extensions.rs.php  linguist_filenames.rs  linguist_filenames.rs.php  linguist_heuristics.rs  linguist_heuristics.rs.php  linguist_interpreters.rs  linguist_interpreters.rs.php  main.rs  modeline.rs  shebang.rs
t/: file.pl  helpers.pl  linguist.pl
tests/: linguist.rs  linguist.rs.php
