[package]
name = "file-expert"
version = "1.0.0-alpha.0"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Expert system for recognizing source code files, similar to GitHub/lingust."
repository = "https://github.com/kalkin/file-expert"

[dependencies]
clap = { version="=3.0.0-beta.4", default-features=false, features=["std", "cargo"] }
lazy_static = "1.4.0"
fancy-regex = "0.6.0"
