[package]
name = "file-expert"
version = "1.0.0"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Expert system for recognizing source code files, similar to GitHub/lingust."
repository = "https://github.com/kalkin/file-expert"
readme = "README.md"
keywords = [
    "linguist",
    "linguist-heuristics",
    "expert-system",
    "source-code"
]
categories = [
    "command-line-utilities",
    "development-tools",
    "text-processing"
]

include = [
    "./Cargo.toml",
    "./Cargo.lock",
    "src/*.rs",
    "README.md",
    "CHANGELOG.md",
    "COPYING.md",
]

[dependencies]
clap = { version="=3.0.0-beta.4", default-features=false, features=["std", "cargo"] }
lazy_static = "1.4.0"
fancy-regex = "^0.7"
